# anomaly_detection_flowmatching

./: .gitignore  CLAUDE.md  README.md  create_brats_split.py  demo.py  download_anomaly_results.sh  execute_anomaly_detection.sh  fix_and_notify.sh  hf_download.py  hf_upload.py  infer.py  infer_anomaly.py  monitor_train.sh  preprocessed_split_train_val_test.json  process_brats.py  pyproject.toml  requirements.txt  run_demo.sh  run_experiments.py  run_grid.sh  run_phase1.sh  run_phase2.sh  run_phase3.sh  setup.sh  train.py  train_arg_parser.py  train_brats.sh  train_cifar10.sh
datasets/: brats.py  simple_shape.py
flow_matching/solver/: ode_solver.py
models/: classifier.py  model_configs.py  unet.py
output_brats/: args.json
training/: classifier_guidance.py  classifier_train_loop.py  eval_loop.py  grad_scaler.py  load_and_save.py  train_loop.py
