[project]
name = "flow-matching-brats"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.3",
    "torchvision>=0.18",
    "torchdiffeq>=0.2.3",
    "torchmetrics[image]>=1.0",
    "torch-fidelity",
    "tqdm",
    "submitit",
    "cloudpickle",
    "lightning-utilities",
    "nibabel",
    "opencv-python",
    "scikit-image",
    "Pillow",
    "numpy",
    "scipy",
    "scikit-learn",
    "matplotlib",
]

[tool.uv]
# PyTorch with CUDA 12.4 — covers RTX 5070 Ti / 5090 (CUDA 12.8 driver is backward compat)
find-links = [
    "https://download.pytorch.org/whl/cu124",
]

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
