[project]
name = "flow-matching-brats"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.3",
    "torchvision>=0.18",
    "torchdiffeq>=0.2.3",
    "torchmetrics[image]>=1.0",
    "torch-fidelity",
    "tqdm",
    "submitit",
    "cloudpickle",
    "lightning-utilities",
    "nibabel",
    "opencv-python",
    "scikit-image",
    "Pillow",
    "numpy",
    "scipy",
    "scikit-learn",
    "matplotlib",
    "huggingface-hub",
]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
